src/App.scss
/* GENERIC SELECTORS */

* {
	margin: 0;
	padding: 0;
	border: 0;
	text-decoration: none;
}

body {
	background-color: #f0f0f0;
	font-family: trebuchet ms, trebuchet, arial, helvetica, geneva, sans-serif;
}

#title {
	position: absolute;
	bottom: 10;
	left: 200;
	color: white;
}

#facebook_pane {
	display: flex;
	background: white;
}

#facebook_pane > a > img {
	height: 100%;
	width: 100%;
}

#sidebar {
	width: 280px;
	padding: 10px;
	position: absolute;
	right: 20px;
	overflow: hidden;
	background: white;
	z-index: 1;
}

#puzzle_pane {
	width: 280px;
	margin: auto;
	background: white;
	padding-top: 10px;
	text-align: center;
	margin-top: 10px;
	border-radius: 5px;
}

#main {
	margin-left: 30px;
	margin-right: 340px;
}

#content {
	background: white;
	padding-left: 20px;
	border-radius: 5px;
}

#page {
	margin: auto;
	width: 1080px;
	background: white;
	padding-top: 10px;
	min-height: 800px;
	position: relative;
	overflow: hidden;
}

/* http://stackoverflow.com/questions/211383/which-method-of-clearfix-is-best */

/* For modern browsers */
#page:before,
#page:after {
	content: "";
	display: table;
}
#page:after {
	clear: both;
}

#nav li.selected {
	background: #002147;
}

/* Main area styling */

#main h1 {
	margin-top: 20px;
	margin-bottom: 10px;
	font-size: 30px;
}

#main h1:first-child {
	margin-top: 15px;
}

#main h2 {
	margin-top: 10px;
	margin-bottom: 10px;
	font-size: 24px;
}

#main h3 {
	margin-top: 10px;
	margin-bottom: 10px;
	font-size: 18px;
	font-style: italic;
}

#main p {
	margin-bottom: 10px;
}

#main ul,
#main ol {
	margin-left: 30px;
	margin-bottom: 10px;
}

#main table {
	margin-bottom: 10px;
	width: 100%;
}

#main td {
	background: #e8e8e8;
	padding: 3px;
	text-align: center;
}

#main th {
	background: #dddddd;
	padding: 5px;
	text-align: center;
}

/* News styling */

#feed {
	border-top: 1px solid gray;
}

div.article {
	padding-bottom: 20px;
	border-bottom: 1px solid gray;
}

div.article:last {
	border-bottom: 0;
}

#next_event {
	padding: 10px;
}

#next_event h2,
#next_event h3 {
	margin-left: 20px;
}

#news_hlines {
	padding: 10px 10px 30px;
	position: relative;
}

#news_hlines ul {
	font-size: 90%;
	margin-left: 20px;
}

#news_hlines a {
	position: absolute;
	right: 10px;
	font-size: 90%;
}

#news_hlines li {
	margin-bottom: 2px;
}

input,
textarea {
	border: 1px solid gray;
}

#contact_table th {
	width: 25%;
}

#contact_table input {
	width: 100%;
	height: 100%;
	box-sizing: border-box;
	-moz-box-sizing: border-box;
}

#contact_table textarea {
	width: 100%;
	box-sizing: border-box;
	-moz-box-sizing: border-box;
	resize: none;
}
#foot {
	background: #f0f0f0;
	width: 100%;
	height: 120px;
	bottom: 0;
	z-index: 100;
}
#sponsors {
	width: 1080px;
	margin: auto;
	border-top: 1px solid gray;
	text-align: center;
	background: white;
}
#sp {
	margin: auto;
	list-style-type: none;
	height: 90px;
	width: 1080px;
}

#sp li {
	height: 90px;
	width: 200px;
	margin: auto;
	display: inline-block;
	line-height: 40px;
	cursor: pointer;
}

